@@ -8,9 +8,11 @@ confdir = $(sysconfdir)/nhc
 
 dist_sbin_SCRIPTS = nhc
 dist_conf_DATA = nhc.conf
-nobase_dist_conf_DATA = scripts/common.nhc scripts/ww_fs.nhc \
-    scripts/ww_hw.nhc scripts/ww_job.nhc scripts/ww_ps.nhc
 dist_helper_SCRIPTS = helpers/node-mark-online helpers/node-mark-offline
+
+nobase_dist_conf_DATA = scripts/common.nhc scripts/ww_fs.nhc	\
+                        scripts/ww_hw.nhc scripts/ww_job.nhc	\
+                        scripts/ww_nv.nhc scripts/ww_ps.nhc
 
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure install-sh missing
 DISTCLEANFILES = 
