@@ -4,12 +4,12 @@
 #
 
 plan $((6+5+5+2)) "common.nhc" && {
-    is `type -t mcheck_regexp 2>&1` 'function' 'mcheck_regexp() loaded properly'
-    is `type -t mcheck_glob 2>&1` 'function' 'mcheck_glob() loaded properly'
-    is `type -t mcheck 2>&1` 'function' 'mcheck() loaded properly'
-    is `type -t nhc_load_conf 2>&1` 'function' 'nhc_load_conf() loaded properly'
-    is `type -t nhc_common_load_passwd 2>&1` 'function' 'nhc_common_load_passwd() loaded properly'
-    is `type -t nhc_common_get_uid 2>&1` 'function' 'nhc_common_get_uid() loaded properly'
+    is "`type -t mcheck_regexp 2>&1`" 'function' 'mcheck_regexp() loaded properly'
+    is "`type -t mcheck_glob 2>&1`" 'function' 'mcheck_glob() loaded properly'
+    is "`type -t mcheck 2>&1`" 'function' 'mcheck() loaded properly'
+    is "`type -t nhc_load_conf 2>&1`" 'function' 'nhc_load_conf() loaded properly'
+    is "`type -t nhc_common_load_passwd 2>&1`" 'function' 'nhc_common_load_passwd() loaded properly'
+    is "`type -t nhc_common_get_uid 2>&1`" 'function' 'nhc_common_get_uid() loaded properly'
 
     mcheck "This is a test." '/test/'
     is $? 0 "Basic regexp match via mcheck()"
