@@ -4,8 +4,8 @@
 #
 
 plan 2 "ww_job.nhc" && {
-    is `type -t nhc_job_find_users 2>&1` 'function' 'nhc_job_find_users() loaded properly'
-    is `type -t nhc_job_user_auth 2>&1` 'function' 'nhc_job_user_auth() loaded properly'
+    is "`type -t nhc_job_find_users 2>&1`" 'function' 'nhc_job_find_users() loaded properly'
+    is "`type -t nhc_job_user_auth 2>&1`" 'function' 'nhc_job_user_auth() loaded properly'
 
     # No other unit tests here since this module has no end-user checks.
 } ; unplan
